--- a/README
+++ b/README
@@ -48,13 +48,18 @@ containing a Python module.  The module is accessed from Python through the
 
 To compile your PBR-dependent project, you will need to be sure the compiler's
 include paths are configured to find Python, Boost, and PBR headers.  You will
-need to link against a version of the Boost.Python runtime library, e.g.,
+also need to link against a version of the Boost.Python runtime library, e.g.,
 libboost_python.so.
 
 If you link against the dynamic Boost.Python library, you may need to modify
-LD_LIBRARY_PATH so that the Boost library is found at runtime.
+LD_LIBRARY_PATH before starting Python, so that the Boost library is found at
+runtime.  That is most likely the problem if Python raises an error like the
+following when you try to import you extension:
 
-See the test/ subdirectory in this project for examples.
+    ImportError: libboost_python.so.1.46.1: cannot open shared object file: No
+        such file or directory
+
+See the test/ and examples/ subdirectories in this project for examples.
 
 
 Author
